[gd_scene load_steps=4 format=3 uid="uid://c8tpjy55kgjir"]

[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/CharacterConfigItem/CharacterConfigItem.gd" id="1_c8d04"]
[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/DropValidators/VBoxImageContainer.gd" id="2_2p7v8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jphkd"]
bg_color = Color(0.733333, 1, 0.764706, 0.309804)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="CharacterConfigItem" type="Control"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c8d04")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jphkd")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
modulate = Color(1, 1, 1, 0.611765)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer"]
clip_contents = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("2_2p7v8")

[node name="LineId" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 24
placeholder_text = "Character Id"

[node name="LineName" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 24
placeholder_text = "Character Name"

[node name="RemovePortrait" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Remove Portrait"

[connection signal="gui_input" from="Panel/MarginContainer" to="." method="_on_texture_rect_gui_input"]
[connection signal="dropped_data" from="Panel/MarginContainer/VBoxContainer" to="." method="_on_v_box_container_dropped_data"]
[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/LineId" to="." method="_on_line_id_edit_text_changed"]
[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/LineName" to="." method="_on_line_name_text_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/RemovePortrait" to="." method="_on_remove_portrait_pressed"]
